Released Spring Web Services 2.0.0-RC2